JavaScript/rediscovering_javascript/arrow/output/run-no-generator.output
const primesStartingFrom = *(start) => { //Will not work
                           ^

SyntaxError: Unexpected token *
